--- a/app/resources/templates/index.html
+++ b/app/resources/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="flex">
-        <div class="bg-orange-300 w-3/5 m-5 p-5">
+        <div class="bg-orange-300 w-3/5 m-5 p-5 w-full">
             I'm the content of main article page
         </div>
       <div class="bg-green-300 w-1/5 m-5 text-center p-5">
