--- a/app/resources/templates/index.html
+++ b/app/resources/templates/index.html
@@ -39,7 +39,7 @@
           <div class="flex w-full pl-4 text-sm bg-gray-700 bg-opacity-25 rounded-t-lg">
             <ul class="list-reset flex justify-between flex-1 md:flex-none items-center">
               <li class="mr-2">
-              <a class="text-2xl inline-block py-2 px-2 text-white no-underline hover:underline" href="post.html">POST</a>
+              <a class="text-2xl inline-block py-2 px-2 text-white no-underline hover:underline" href="/">HOME</a>
               </li>
               <li class="mr-2">
               <a class="text-2xl inline-block text-white no-underline hover:text-white hover:underline py-2 px-2" href="#">LINK</a>
@@ -60,10 +60,6 @@
               </a>
             </div>
           </div>
-  
-  
-          
-  
         </div>
       </nav>
   
@@ -77,8 +73,9 @@
       <div class="w-full md:w-1/3 flex flex-col flex-grow flex-shrink">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
           
-          <div class="w-full font-bold text-xl text-gray-900 px-6 mb-5 mt-5">POST TITLE</div>
+          <div class="w-full font-bold text-xl text-gray-900 px-6 mb-5 mt-5">{{ posts['title']}}</div>
           <p class="text-gray-800 font-serif text-base px-6 mb-5">
+             
             Teaser Post body .... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente corrupti obcaecati aliquam eaque possimus qui soluta harum natus dolor, necessitatibus aut exercitationem fuga labore fugit blanditiis accusantium suscipit sunt non.
           </p>
         </div>
