--- a/app/resources/templates/posts/post-show.html
+++ b/app/resources/templates/posts/post-show.html
@@ -6,15 +6,14 @@
 {{ post.body }}
 {{ post.user }}
 
-<form action="deletePost/{{ post.id }}" method="POST">
-	<input type="hidden" name="method" value="DELETE">
-	<input type="hidden" name="id" value="<?= $id ?>">
-	<button type="submit">Delete Post</button>
+<form action="/editPost/{{ post.id }}">
+	<button type="submit">Edit Post</button>
 </form>
 
-<form action="updatePost/{{ post.id }}" method="POST">
-	<input type="hidden" name="id" value="<?= $id ?>">
-	<button type="submit">Edit Post</button>
+<form action="/deletePost/{{ post.id }}" method="POST">
+	<input type="hidden" name="method" value="DELETE">
+	<input type="hidden" name="id" value="{{ post.id }}">
+	<button type="submit">Delete Post</button>
 </form>
 
 {% endblock %}
