--- a/app/resources/templates/posts/post-edit.html
+++ b/app/resources/templates/posts/post-edit.html
@@ -2,14 +2,18 @@
 
 {% block content %}
     
-<form action="updatePost/{{  }}" method="POST">
-	<input type="hidden" name="id" value="<?= $id ?>">
+<form action="/updatePost/{{ post.id }}" method="POST">
+	<input type="hidden" name="id" value="{{ post.id }}">
+	<label>Title</label>
+	<input type="textbox" name="title" value="{{ post.title }}">
+	<label>Body</label>
+	<textarea name="body">{{ post.body }}</textarea>
 	<button type="submit">Update</button>
 </form>
 
-<form action="deletePost<?= $id ?>" method="POST">
+<form action="/deletePost/{{ post.id }}" method="POST">
 	<input type="hidden" name="method" value="DELETE">
-	<input type="hidden" name="id" value="<?= $id ?>">
+	<input type="hidden" name="id" value="{{ post.id }}">
 	<button type="submit">Delete Post</button>
 </form>
 
