--- a/app/resources/templates/admin/admin-index.html
+++ b/app/resources/templates/admin/admin-index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/master-layout.html" %}
+{% extends "layouts/admin/admin-layout.html" %}
 {% block title %}
     <title>Admin Dashboard</title>
 {% endblock title %}
