--- a/app/resources/templates/admin/posts-index.html
+++ b/app/resources/templates/admin/posts-index.html
@@ -1,5 +1,5 @@
-{% extends "layouts/master-layout.html" %}
-{% block title %}<title>Post Index</title>{% endblock title %}
+{% extends "layouts/admin/admin-layout.html" %}
+{% block title %}<title>Posts Index</title>{% endblock title %}
 {% block main_content %}
 <div class="bg-blue-800 p-2 shadow text-xl text-white">
     <h3 class="font-bold pl-2">Posts</h3>
