--- a/app/resources/templates/auth/loginForm.html
+++ b/app/resources/templates/auth/loginForm.html
@@ -14,17 +14,17 @@
                       <div class="text-center text-3xl font-base text-black">
                          Please Login
                       </div>
-                      <form class="mt-8" x-data="{password: '',password_confirm: ''}" action="/login" method="POST">
+                      <form class="mt-8" action="/login" method="POST">
                           <div class="mx-auto max-w-lg ">
                               <div class="py-1">
                                   <span class="px-1 text-sm text-gray-600">Email</span>
-                                  <input placeholder="" type="email"
+                                  <input placeholder="" type="email" name="email"
                                          class="text-md block px-3 py-2 rounded-lg w-full
                   bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
                               </div>
                               <div class="py-1">
                                   <span class="px-1 text-sm text-gray-600">Password</span>
-                                  <input placeholder="" type="password" x-model="password"
+                                  <input placeholder="" type="password" x-model="password" name="password"
                                          class="text-md block px-3 py-2 rounded-lg w-full
                   bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
                               </div>
