--- a/app/resources/templates/auth/registerForm.html
+++ b/app/resources/templates/auth/registerForm.html
@@ -14,69 +14,26 @@
                     <div class="text-center font-semibold text-black text-3xl">
                       Register
                     </div>
-                    <form class="mt-8" x-data="{password: '',password_confirm: ''}">
+                    
+                    <form class="mt-8" action="/users" method="POST">
                         <div class="mx-auto max-w-lg ">
                             <div class="py-1">
                                 <span class="px-1 text-sm text-gray-600">Username</span>
-                                <input placeholder="" type="text"
+                                <input placeholder="" type="text" name="name"
                                        class="text-md block px-3 py-2 rounded-lg w-full
                 bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
                             </div>
                             <div class="py-1">
                                 <span class="px-1 text-sm text-gray-600">Email</span>
-                                <input placeholder="" type="email"
+                                <input placeholder="" type="email" name="email"
                                        class="text-md block px-3 py-2 rounded-lg w-full
                 bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
                             </div>
                             <div class="py-1">
                                 <span class="px-1 text-sm text-gray-600">Password</span>
-                                <input placeholder="" type="password" x-model="password"
+                                <input placeholder="" type="password" x-model="password" name="password"
                                        class="text-md block px-3 py-2 rounded-lg w-full
                 bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
-                            </div>
-                            <div class="py-1">
-                                <span class="px-1 text-sm text-gray-600">Password Confirm</span>
-                                <input placeholder="" type="password" x-model="password_confirm"
-                                       class="text-md block px-3 py-2 rounded-lg w-full
-                bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
-                            </div>
-                            <div class="flex justify-start mt-3 ml-4 p-1">
-                                <ul>
-                                    <li class="flex items-center py-1">
-                                        <div :class="{'bg-green-200 text-green-700': password == password_confirm && password.length > 0, 'bg-red-200 text-red-700':password != password_confirm || password.length == 0}"
-                                             class=" rounded-full p-1 fill-current ">
-                                            <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                <path x-show="password == password_confirm && password.length > 0" stroke-linecap="round"
-                                                      stroke-linejoin="round" stroke-width="2"
-                                                      d="M5 13l4 4L19 7"/>
-                                                <path x-show="password != password_confirm || password.length == 0" stroke-linecap="round"
-                                                      stroke-linejoin="round" stroke-width="2"
-                                                      d="M6 18L18 6M6 6l12 12"/>
-
-                                            </svg>
-                                        </div>
-                                        <span :class="{'text-green-700': password == password_confirm && password.length > 0, 'text-red-700':password != password_confirm || password.length == 0}"
-                                              class="font-medium text-sm ml-3"
-                                              x-text="password == password_confirm && password.length > 0 ? 'Passwords match' : 'Passwords do not match' "></span>
-                                    </li>
-                                    <li class="flex items-center py-1">
-                                        <div :class="{'bg-green-200 text-green-700': password.length > 7, 'bg-red-200 text-red-700':password.length < 7 }"
-                                             class=" rounded-full p-1 fill-current ">
-                                            <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                <path x-show="password.length > 7" stroke-linecap="round"
-                                                      stroke-linejoin="round" stroke-width="2"
-                                                      d="M5 13l4 4L19 7"/>
-                                                <path x-show="password.length < 7" stroke-linecap="round"
-                                                      stroke-linejoin="round" stroke-width="2"
-                                                      d="M6 18L18 6M6 6l12 12"/>
-
-                                            </svg>
-                                        </div>
-                                        <span :class="{'text-green-700': password.length > 7, 'text-red-700':password.length < 7 }"
-                                              class="font-medium text-sm ml-3"
-                                              x-text="password.length > 7 ? 'The minimum length is reached' : 'At least 8 characters required' "></span>
-                                    </li>
-                                </ul>
                             </div>
                             <div class="flex justify-start">
                                 <label class="block text-gray-500 font-bold my-4 flex items-center">
