--- a/app/resources/templates/users/show.html
+++ b/app/resources/templates/users/show.html
@@ -2,3 +2,13 @@
 	<li>{{ user.name }}</li>
 	<li>{{ user.email }}</li>
 </ul>
+
+<form action="/editUser/{{ user.id }}">
+	<button type="submit">Edit User</button>
+</form>
+
+<form action="/deleteUser/{{ user.id }}" method="POST">
+	<input type="hidden" name="method" value="DELETE">
+	<input type="hidden" name="id" value="{{ user.id }}">
+	<button type="submit">Delete User</button>
+</form>
