--- a/app/resources/templates/admin/posts-index.html
+++ b/app/resources/templates/admin/posts-index.html
@@ -4,4 +4,7 @@
 <div class="bg-blue-800 p-2 shadow text-xl text-white">
     <h3 class="font-bold pl-2">Posts</h3>
 </div>
+<div>
+    
+</div>
 {% endblock main_content %}
