dashboard post index twig created

--- a/app/resources/templates/homepage.html
+++ b/app/resources/templates/homepage.html
@@ -26,9 +26,14 @@
  
   {% block header_nav %}
 {#   {% if userRole == false %} #}
+
   <div class="text-right text-gray-400"> 
+
+    <a class="mx-3 no-underline hover:underline" href="/logout">Logout</a>
+
     <a class="no-underline hover:underline" href="/login">Login</a>
     <a class="mx-3 no-underline hover:underline" href="/register">Register</a>
+
   </div>
 {#   {% endif %} #}
  
