--- a/app/resources/templates/layouts/admin/admin-layout.html
+++ b/app/resources/templates/layouts/admin/admin-layout.html
@@ -72,7 +72,6 @@
         </div>
     </nav>
     {% endblock admin_nav %}
-
     <div class="flex flex-col md:flex-row">
          <!-- admin sidebar-->
         <div class="bg-gray-900 shadow-lg h-16 fixed bottom-0 mt-12 md:relative md:h-screen z-10 w-full md:w-48">
@@ -94,6 +93,11 @@
                             <i class="fas fa-users mr-2"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:text-white block md:inline-block">Users</span>
                         </a>
                     </li>
+                    <li class="mr-3 flex-1">
+                        <a href="/posts/create" class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-gray-800 hover:border-blue-600">
+                            <i class="fas fa-pen-nib mr-2"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:text-white block md:inline-block">Create Post</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             {% endblock admin_sidebar %}
@@ -102,7 +106,7 @@
 
  <!-- main content -->
 
-        <div class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5">
+<div class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5 ">
 {% block main_content %}
             <div class="bg-blue-800 p-2 shadow text-xl text-white">
                 <h3 class="font-bold pl-2">Analytics</h3>
