--- a/app/resources/templates/posts/post-create.html
+++ b/app/resources/templates/posts/post-create.html
@@ -27,8 +27,8 @@
                 </div>
             </div>
         </div> 
-        <div>
-            <button class="text-white bg-green-400 rounded p-3 m-3 w-1/4 hover:bg-green-200 hover:text-gray-700 w-full">Save Post</button>
+        <div class="w-full flex">
+            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Save Post</button>
         </div>
     </form>
 </div>
