--- a/app/resources/templates/posts/post-edit.html
+++ b/app/resources/templates/posts/post-edit.html
@@ -1,6 +1,13 @@
-{% block content %}
+{% extends "layouts/admin/admin-layout.html" %}
+{% block title %}
+    <title>Edit Post</title>
+{% endblock title %}
+{% block scripts %}
+<script src="https://cdn.tiny.cloud/1/rjop1kl90me77vjkt7io6nipc63kscevcbgfe70vj2h878zx/tinymce/5/tinymce.min.js" referrerpolicy="origin">
+</script>
+{% endblock scripts %}
     
-<form action="/updatePost/{{ post.id }}" method="POST">
+{# <form action="/updatePost/{{ post.id }}" method="POST">
 	<input type="hidden" name="id" value="{{ post.id }}">
 	<label>Title</label>
 	<input type="textbox" name="title" value="{{ post.title }}">
@@ -8,11 +15,49 @@
 	<textarea name="body">{{ post.body }}</textarea>
 	<button type="submit">Update</button>
 </form>
+ #}
 
-<form action="/deletePost/{{ post.id }}" method="POST">
-	<input type="hidden" name="method" value="DELETE">
-	<input type="hidden" name="id" value="{{ post.id }}">
-	<button type="submit">Delete Post</button>
-</form>
 
-{% endblock %}
+{% block main_content %}
+<div class="container p-5">
+    <form action="/updatePost/{{ post.id }}" method="POST">
+        <div>
+			<input type="hidden" name="id" value="{{ post.id }}">
+            <div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="title">Post Title</label>
+                </div>
+                <div>
+                    <input class="w-full p-3 mb-5" type="text" name="title" value="{{ post.title }}">
+                </div>
+            </div>
+            <div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="body">Post Body</label>
+                </div>
+                <div>
+                    <textarea class="w-full" type="text" name="body" rows="20">{{ post.body }}</textarea>
+                </div>
+            </div>
+        </div> 
+        <div class="w-full flex">
+            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Update Post</button>
+		</div>
+	</form>
+	<div class="flex w-full">
+		<form action="/deletePost/{{ post.id }}" method="POST" class="w-full flex">
+			<input type="hidden" name="method" value="DELETE">
+			<input type="hidden" name="id" value="{{ post.id }}">
+			<button class="text-white bg-red-600 rounded p-3 m-3 w-1/4 hover:bg-red-500 w-full">Delete Post</button>
+		</form>
+	</div>
+</div>
+{% endblock main_content %}
+{% block footer_scripts %}
+<script>
+    tinymce.init({
+      selector: 'textarea'
+    });
+  </script>
+  {{ parent() }}
+{% endblock footer_scripts %}
