--- a/app/resources/templates/posts/index-posts.html
+++ b/app/resources/templates/posts/index-posts.html
@@ -1,17 +1,15 @@
 {% extends "homepage.html" %}
 
 {% block body_content %}
-{% block header_image %}
-<div class="w-full m-0 p-0 bg-cover bg-bottom" style="background-image:url('https://source.unsplash.com/collection/1227291/1600x900'); height: 20vh; max-height:460px;">
-{% endblock header_image %}
+
 {% block header_nav %}
     {{ parent() }}
 {% endblock header_nav %}
 {% block header_title %}
-<div class="container max-w-4xl mx-auto pt-16 md:pt-5 text-center break-normal">
+<div class="container max-w-4xl mx-auto pt-16 md:pt-5 text-center break-normal mt-20">
     <!--Title-->
     
-    <p class="text-gray-100 font-extrabold text-3xl md:text-5xl">
+    <p class="text-gray-700 font-extrabold text-3xl md:text-5xl">
       Sport Blog
     </p>
     <p class="text-xl md:text-2xl text-gray-500">
@@ -34,7 +32,9 @@
 
 </div>
 
-    
+    {% block footer_scripts %}
+        {{ parent() }}
+    {% endblock footer_scripts %}
 
 
 {% endblock body_content %}
