--- a/app/resources/templates/posts/post-show.html
+++ b/app/resources/templates/posts/post-show.html
@@ -46,13 +46,17 @@
 
 
 <form action="/editPost/{{ post.id }}">
-	<button type="submit">Edit Post</button>
+	<div class="w-full flex">
+		<button type="submit" class="text-white bg-blue-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Edit Post</button>
+	</div>
 </form>
 
 <form action="/deletePost/{{ post.id }}" method="POST">
 	<input type="hidden" name="method" value="DELETE">
 	<input type="hidden" name="id" value="{{ post.id }}">
-	<button type="submit">Delete Post</button>
+	<div class="w-full flex">
+		<button type="submit" class="text-white bg-red-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Delete Post</button>
+	</div>
 </form>
 
 {% block footer_scripts %}
