--- a/app/resources/templates/posts/post-create.html
+++ b/app/resources/templates/posts/post-create.html
@@ -15,7 +15,7 @@
                     <label for="title">Post Title</label>
                 </div>
                 <div>
-                    <input class="w-full p-3 mb-5" type="text" name="title" placeholder="Enter post title">
+                    <input class="w-full p-3 mb-5 border" type="text" name="title" placeholder="Enter post title">
                 </div>
             </div>
             <div class="w-full text-center">
