Edit button on post show added an finished

--- a/app/resources/templates/comments/comment-create.html
+++ b/app/resources/templates/comments/comment-create.html
@@ -1,7 +1,7 @@
 <form action="/comments/{{ post.id }}" method="POST">
     <div>
         <input type="hidden"value="{{ post.id }}">
-        <div>
+        <div class="p-3 text-2xl">
             <label>Add comment</label>
         </div>
       <div>
