--- a/app/resources/templates/posts/post-show.html
+++ b/app/resources/templates/posts/post-show.html
@@ -6,10 +6,59 @@
 
 {% block header_title %}
 <div class="container max-w-4xl mx-auto pt-16 md:pt-5 text-center break-normal ">
-     <!--Title-->
-     <p class="text-xl md:text-6xl text-gray-700">
-		 {{ post.title }}
-     </p>
+	 <!--Title-->
+
+
+
+
+	 <!-- edit button -->
+	 <div class="relative">
+		<button class="ml-auto block focus:outline-none hover:underline" onClick="toggleEdit()">Edit Post</button>
+		<div id="edit-menu" class="border rounded-lg p-4 absolute right-0 shadow-lg" style="display: none;">
+			<div>
+				<form action="/editPost/{{ post.id }}">
+					<div class="w-full flex">
+						<button type="submit" class="text-white rounded text-gray-800 m-3 w-full hover:underline w-full focus:outline-none">Edit Post</button>
+					</div>
+				</form>	
+			</div>
+			<div>
+				<form action="/deletePost/{{ post.id }}" method="POST">
+					<input type="hidden" name="method" value="DELETE">
+					<input type="hidden" name="id" value="{{ post.id }}">
+					<div class="w-full flex">
+						<button type="submit" class="text-white rounded text-gray-800 m-3 w-full hover:underline w-full focus:outline-none">Delete Post</button>
+					</div>
+				</form>
+			</div>	
+		</div>
+	</div>
+	<!-- end of edit button -->
+
+
+
+
+
+
+     <div class="text-xl md:text-6xl text-gray-700">
+		 <div class="">
+			<div class="mb-20">
+				{{ post.title }}
+			 </div>
+			 <div class="text-sm text-left flex">
+				 <div class="h-16 w-16 rounded-full overflow-hidden mr-4">
+					<img class="w-full h-full object-cover" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+				 </div>
+
+				 <div class="italic hover:underline mt-auto">
+					<a href="/users/{{ post.user.id }}">{{ post.user.name }}</a>
+				 </div>
+			</div>
+			
+			
+		 </div>
+		 <hr class="mt-10">
+     </div>
 
  {% endblock header_title %}
  <div class="mt-20 p-5">
@@ -21,45 +70,76 @@
 
 {% endautoescape %}
 </div>
-{{ post.user.name }}
 
-<h3>Comments section</h3>
+
 
 
 {% for comment in comments %}
-	<li>{{ comment.body }}</li>
-	{{ comment.user.name }}
-	{{ comment.createdAt|date('d.m.Y H:i') }}
+<div class="border rounded-lg p-5 mb-8">
+	<div class="flex mb-5">
+		<div class="h-16 w-16 rounded-full overflow-hidden mr-4">
+			<img class="w-full h-full object-cover" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+		 </div>
+		<div class="mr-5 my-auto">
+			<a href="{{ comment.user.id }}" class="hover:underline" >{{ comment.user.name }}</a>
+		</div>
+		<div class="text-sm text-gray-500 my-auto">
+			{{ comment.createdAt|date('d.m.Y H:i') }}
+		</div>
+	</div>
+	
+	<div class="border rounded-lg p-5 text-left">
+		{{ comment.body }}
+	</div>
+	
+		<div class="flex justify-end p-3">
+			<div class="mr-3">
+				<form action="/editComment/{{ comment.id }}">
+					<div class="w-full flex">
+						<button type="submit" class="text-white bg-blue-600 rounded py-1 px-2 m-3 w-1/4 hover:bg-blue-500 w-full">Edit Comment</button>
+					</div>
+				</form>	
+			</div>
+			<div>
+				<form action="/deleteComment/{{ comment.id }}" method="POST">
+					<input type="hidden" name="method" value="DELETE">
+					<input type="hidden" name="id" value="{{ commment.id }}">
+					<div class="w-full flex">
+						<button type="submit" class="text-white bg-red-600 rounded py-1 px-2 m-3 w-1/4 hover:bg-red-500 w-full">Delete Comment</button>
+					</div>
+				</form>
+			</div>		
+		</div>
+		
+	
+		
+</div>
 
-	<form action="/editComment/{{ comment.id }}">
-		<button type="submit">Edit Comment</button>
-	</form>
-
-	<form action="/deleteComment/{{ comment.id }}" method="POST">
-		<input type="hidden" name="method" value="DELETE">
-		<input type="hidden" name="id" value="{{ commment.id }}">
-		<button type="submit">Delete Comment</button>
-	</form>
 {% endfor %}
 
 {% include "comments/comment-create.html" %}
 
 
-<form action="/editPost/{{ post.id }}">
-	<div class="w-full flex">
-		<button type="submit" class="text-white bg-blue-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Edit Post</button>
-	</div>
-</form>
 
-<form action="/deletePost/{{ post.id }}" method="POST">
-	<input type="hidden" name="method" value="DELETE">
-	<input type="hidden" name="id" value="{{ post.id }}">
-	<div class="w-full flex">
-		<button type="submit" class="text-white bg-red-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Delete Post</button>
-	</div>
-</form>
 
 {% block footer_scripts %}
+<script>
+	function toggleEdit() {
+		var x = document.getElementById("edit-menu");
+		if (x.style.display === "none") {
+		  x.style.display = "block";
+		} else {
+		  x.style.display = "none";
+		}
+	  }
+	  document.addEventListener('mouseup', function(e) {
+		var x = document.getElementById('edit-menu');
+		if (!x.contains(e.target)) {
+		  x.style.display = 'none';
+		}
+	  });
+	    
+</script>
 	{{ parent() }}
 {% endblock footer_scripts %}
 	
