--- a/app/resources/templates/users/show.html
+++ b/app/resources/templates/users/show.html
@@ -24,6 +24,7 @@
 			 </div>
 			 <div class="text-sm text-left flex">
 				 <div class="h-16 w-16 rounded-full overflow-hidden mr-4">
+				 	<img src="/{{ user.image }}" alt="User's profil picture" width="150" height="120">
 					<img class="w-full h-full object-cover avatar" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ user.name }}" tabindex="0">
 				 </div>
 				 
