--- a/app/resources/templates/auth/registerForm.html
+++ b/app/resources/templates/auth/registerForm.html
@@ -15,6 +15,24 @@
                       Register
                     </div>
                     
+                    {% if msgUsername %}
+                        <div style="border: 1px solid red; border-radius: 5px">
+                          <span class="px-3 text-red-600">Username is already taken!</span>
+                        </div>
+                    {% endif %}
+
+                    {% if msgEmail %}
+                        <div style="border: 1px solid red; border-radius: 5px">
+                          <span class="px-3 text-red-600">Email is already taken!</span>
+                        </div>
+                    {% endif %}
+
+                    {% if msgPassword %}
+                        <div style="border: 1px solid red; border-radius: 5px">
+                          <span class="px-3 text-red-600">Password have less then 5 characters!</span>
+                        </div>
+                    {% endif %}
+
                     <form class="mt-8" action="/users" method="POST">
                         <div class="mx-auto max-w-lg ">
                             <div class="py-1">
