--- a/app/resources/templates/admin/comments-index.html
+++ b/app/resources/templates/admin/comments-index.html
@@ -4,4 +4,8 @@
 <div class="bg-blue-800 p-2 shadow text-xl text-white">
     <h3 class="font-bold pl-2">Comments</h3>
 </div>
+
+{% for comment in comments %}
+    {{ comment.body    }}
+{% endfor %}
 {% endblock main_content %}
