--- a/app/resources/templates/admin/users-index.html
+++ b/app/resources/templates/admin/users-index.html
@@ -4,4 +4,7 @@
 <div class="bg-blue-800 p-2 shadow text-xl text-white">
     <h3 class="font-bold pl-2">Users</h3>
 </div>
+{% for user in users %}
+    {{ user.name     }}
+{% endfor %}
 {% endblock main_content %}
