--- a/app/resources/templates/homepage.html
+++ b/app/resources/templates/homepage.html
@@ -29,6 +29,7 @@
     <div class="my-auto"> <a class="mx-3 no-underline hover:underline nav-text" href="/logout">Logout</a></div>
     <div class="my-auto"> <a class="no-underline hover:underline nav-text" href="/login">Login</a></div>
     <div class="my-auto"><a class="mx-3 no-underline hover:underline nav-text" href="/register">Register</a></div>   
+    <div class="my-auto"><a class="mx-3 no-underline hover:underline nav-text" href="/dashboard">Dashboard</a></div>
     <!-- social icons -->
     <div class="flex justify-end content-center text-center">		
       <a class="m-auto inline-block text-gray-500 no-underline hover:text-white hover:text-underline text-center h-10 p-2 md:h-auto md:p-2 avatar" data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
@@ -319,9 +320,6 @@
           </div>
         </form>
       </div>
-    </div>
-    <div>
-      <button onclick="up">Up</button>
     </div>
     <!-- /Subscribe-->
 </div>
