Graph Card refactor, index users

--- a/app/resources/templates/posts/post-show.html
+++ b/app/resources/templates/posts/post-show.html
@@ -27,7 +27,7 @@
 			 </div>
 			 <div class="text-sm text-left flex">
 				 <div class="h-16 w-16 rounded-full overflow-hidden mr-4">
-					<img class="w-full h-full object-cover" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+					<img class="w-full h-full object-cover avatar" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
 				 </div>
 
 				 <div class="italic hover:underline mt-auto">
