--- a/app/resources/templates/admin/posts-index.html
+++ b/app/resources/templates/admin/posts-index.html
@@ -8,12 +8,17 @@
 <div class="p-10">
 {% for post in posts %}
         <div class="md:flex md:justify-between p-5 hover:shadow-xl rounded-lg">
-            <div class="my-auto mb-5 md-mb-0">
+            <div class="my-auto mb-5 md-mb-0 w-1/3">
                 <a href="/posts/{{ post.id }}" class="text-2xl no-underline hover:underline mr-5">{{ post.title }}</a>
                 <div class="text-sm my-auto">{{ post.createdAt|date('d.m.Y H:i') }}</div>
             </div>
-            <div class="flex justify-between">
-                <div class="mr-3">
+            <div class="w-1/3">
+                <div class="my-auto mb-5 md-mb-0">
+                    <a href="/users/{{ post.user.id }}" class="text-2xl no-underline hover:underline mr-5">{{ post.user.name }}</a>
+                </div>
+            </div>
+            <div class="flex md:w-1/3">
+                <div class="ml-auto mr-5">
                     <form action="/editPost/{{ post.id }}">
                         <button class="text-white bg-blue-600 rounded p-3 m-3 w-1/4 hover:bg-blue-500 w-full" type="submit">Edit Post</button>
                     </form>
