--- a/app/resources/templates/admin/users-index.html
+++ b/app/resources/templates/admin/users-index.html
@@ -1,7 +1,40 @@
 {% extends "layouts/admin/admin-layout.html" %}
 {% block title %}<title>Users Index</title>{% endblock title %}
 {% block main_content %}
+
 <div class="bg-blue-800 p-2 shadow text-xl text-white">
     <h3 class="font-bold pl-2">Users</h3>
+</div>
+<div class="p-10">
+{% for user in users %}
+        <div class="md:flex md:justify-between p-5 hover:shadow-xl rounded-lg">
+            <div class="w-1/3">
+                <div class="my-auto mb-5 md-mb-0">
+                    <a href="/users/{{ user.id }}" class="text-2xl no-underline hover:underline mr-5">{{ user.name }}</a>
+                </div>
+            </div>
+            <div class="my-auto mb-5 md-mb-0 w-1/3">
+                <a href="/users/{{ user.id }}" class="text-2xl no-underline hover:underline mr-5">{{ user.title }}</a>
+                <div class="text-sm my-auto">{{ user.createdAt|date('d.m.Y H:i') }}</div>
+            </div>
+            <div class="flex md:w-1/3">
+                <div class="ml-auto mr-5">
+                    <form action="/editUser/{{ user.id }}">
+                        <button class="text-white bg-blue-600 rounded p-3 m-3 w-1/4 hover:bg-blue-500 w-full" type="submit">Edit User</button>
+                    </form>
+                </div>
+                <div>
+                    <form action="/deleteUser/{{ user.id }}" method="POST" class="w-full flex">
+                        <input type="hidden" name="method" value="DELETE">
+                        <input type="hidden" name="id" value="{{ user.id }}">
+                        <button class="text-white bg-red-600 rounded p-3 m-3 w-1/4 hover:bg-red-500 w-full">Delete User</button>
+                    </form>
+                </div>
+            </div>
+            
+        </div>
+        
+
+    {% endfor %}
 </div>
 {% endblock main_content %}
