--- a/app/resources/templates/homepage.html
+++ b/app/resources/templates/homepage.html
@@ -28,7 +28,8 @@
    <div class="flex justify-between"> 
     <div class="my-auto"> <a class="mx-3 no-underline hover:underline nav-text" href="/logout">Logout</a></div>
     <div class="my-auto"> <a class="no-underline hover:underline nav-text" href="/login">Login</a></div>
-    <div class="my-auto"><a class="mx-3 no-underline hover:underline nav-text" href="/register">Register</a></div>   
+    <div class="my-auto"><a class="mx-3 no-underline hover:underline nav-text" href="/register">Register</a></div>  
+    <div class="my-auto"><a class="mx-3 no-underline hover:underline nav-text" href="/dashboard">Dashboard</a></div> 
     <!-- social icons -->
     <div class="flex justify-end content-center text-center">		
       <a class="m-auto inline-block text-gray-500 no-underline hover:text-white hover:text-underline text-center h-10 p-2 md:h-auto md:p-2 avatar" data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
@@ -348,16 +349,17 @@
             <a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:underline py-2 px-3" href="#">link</a>
           </li>
         </ul>
-          <script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
+          
+        </div>
+      </div>
+    </div>
+{% block footer_scripts %}
+<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
           <script src="https://unpkg.com/tippy.js@4"></script>
             <script>
             //Init tooltips
             tippy('.avatar')
             </script>
-        </div>
-      </div>
-    </div>
-{% block footer_scripts %}
 <script>
   window.onscroll = function() {scrollFunction()};
   function scrollFunction() {
