--- a/app/resources/templates/layouts/admin/admin-layout.html
+++ b/app/resources/templates/layouts/admin/admin-layout.html
@@ -19,22 +19,16 @@
     {% endblock scripts %}
     
 </head>
-
 <body class="bg-gray-900 font-sans leading-normal tracking-normal mt-12">
-
     {% block admin_nav %}
-        
-   
     <!--Nav-->
     <nav class="bg-gray-900 pt-2 md:pt-1 pb-1 px-1 mt-0 h-auto fixed w-full z-20 top-0">
-
         <div class="flex flex-wrap items-center">
             <div class="flex flex-shrink md:w-1/3 justify-center md:justify-start text-white">
                 <a href="/">
                     <span class="text-xl pl-2">View Site</span>
                 </a>
             </div>
-
             <div class="flex flex-1 md:w-1/3 justify-center md:justify-start text-white px-2">
                 <span class="relative w-full">
                     <input type="search" placeholder="Search" class="w-full bg-gray-800 text-sm text-white transition border border-transparent focus:outline-none focus:border-gray-700 rounded py-1 px-2 pl-10 appearance-none leading-normal">
@@ -56,12 +50,12 @@
 				    </li>
 				    <li class="flex-1 md:flex-none md:mr-3">
 						<div class="relative inline-block">
-                           
-							<button onclick="toggleDD('myDropdown')" class="drop-button text-white focus:outline-none"> <span class="pr-2"><i class="em em-robot_face"></i></span> Hi, User <svg class="h-3 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg></button>
+                             
+							<button onclick="toggleDD('myDropdown')" class="drop-button text-white focus:outline-none"> <span class="pr-2"><i class="em em-robot_face"></i></span> Hi, {{user.name}} <svg class="h-3 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg></button>
                             <div id="myDropdown" class="dropdownlist absolute bg-gray-900 text-white right-0 mt-3 p-3 overflow-auto z-30 invisible">
                                 <input type="text" class="drop-search p-2 text-gray-600" placeholder="Search.." id="myInput" onkeyup="filterDD('myDropdown','myInput')">
-                                <a href="/users/{{ userId }} ?>" class="p-2 hover:bg-gray-800 text-white text-sm no-underline hover:no-underline block"><i class="fa fa-user fa-fw"></i> Profile</a>
-                                <a href="/editUser/{{ userId }} ?>" class="p-2 hover:bg-gray-800 text-white text-sm no-underline hover:no-underline block"><i class="fa fa-cog fa-fw"></i> Edit</a>
+                                <a href="/users/{{ userid }}" class="p-2 hover:bg-gray-800 text-white text-sm no-underline hover:no-underline block"><i class="fa fa-user fa-fw"></i> Profile</a>
+                                <a href="/editUser/{{ userId }}" class="p-2 hover:bg-gray-800 text-white text-sm no-underline hover:no-underline block"><i class="fa fa-cog fa-fw"></i> Edit</a>
                                 <div class="border border-gray-800"></div>
                                 <a href="/logout" class="p-2 hover:bg-gray-800 text-white text-sm no-underline hover:no-underline block"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a>
                             </div>
@@ -224,12 +218,12 @@
                                         "labels": ["This Month", "Last Month", "Before 2 Month"],
                                         "datasets": [{
                                             "label": "Posts",
-                                            "data": [ {{ countsLast3Months.postsThisMonth }}, {{ countsLast3Months.postsLastMonth }}, {{ countsLast3Months.postsBefore2Month}} ],
+                                            "data": [ "{{ countsLast3Months.postsThisMonth }}", "{{ countsLast3Months.postsLastMonth }}", "{{ countsLast3Months.postsBefore2Month}}" ],
                                             "borderColor": "rgb(255, 99, 132)",
                                             "backgroundColor": "rgba(255, 99, 132, 0.2)"
                                         }, {
                                             "label": "Comments",
-                                            "data": [ {{ countsLast3Months.commentsThisMonth }}, {{ countsLast3Months.commentsLastMonth }}, {{ countsLast3Months.commentsBefore2Month}} ],
+                                            "data": [" {{ countsLast3Months.commentsThisMonth }}", "{{ countsLast3Months.commentsLastMonth }}", "{{ countsLast3Months.commentsBefore2Month}}" ],
                                             "type": "line",
                                             "fill": false,
                                             "borderColor": "rgb(54, 162, 235)"
@@ -265,7 +259,7 @@
                                         "labels": ["This Month", "Month Ago", "2 Month Ago", "3 Month Ago", "4 Month Ago", "5 Month Ago"],
                                         "datasets": [{
                                             "label": "",
-                                            "data": [{{ countsLast3Months.usersThisMonth }}, {{ countsLast3Months.usersLastMonth }}, {{ countsLast3Months.usersBefore2Month}}, {{ countsLast3Months.usersBefore3Month}}, {{ countsLast3Months.usersBefore4Month}}, {{ countsLast3Months.usersBefore5Month}}],
+                                            "data": ["{{ countsLast3Months.usersThisMonth }}", "{{ countsLast3Months.usersLastMonth }}", "{{ countsLast3Months.usersBefore2Month}}", "{{ countsLast3Months.usersBefore3Month}}", "{{ countsLast3Months.usersBefore4Month}}", "{{ countsLast3Months.usersBefore5Month}}"],
                                             "backgroundColor": ["rgb(255, 99, 132)", "rgb(54, 162, 235)", "rgb(255, 205, 86)", "rgb(0, 204, 102)", "rgb(51, 51, 153)", "rgb(255, 204, 255)"]
                                         }]
                                     }
