--- a/app/resources/templates/users/edit.html
+++ b/app/resources/templates/users/edit.html
@@ -1,3 +1,75 @@
+{% extends "layouts/admin/admin-layout.html" %}
+{% block title %}
+    <title>Edit User</title>
+{% endblock title %}
+{% block scripts %}
+<script src="https://cdn.tiny.cloud/1/rjop1kl90me77vjkt7io6nipc63kscevcbgfe70vj2h878zx/tinymce/5/tinymce.min.js" referrerpolicy="origin">
+</script>
+{% endblock scripts %}
+    
+
+
+{% block main_content %}
+<div class="container p-5">
+    <form action="/updateUser/{{ user.id }}" method="POST">
+        <div>
+			<input type="hidden" name="id" value="{{ user.id }}">
+            <div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="title">Name</label>
+                </div>
+                <div>
+                    <input class="w-full p-3 mb-5 border" type="text" name="username" value="{{ user.name }}">
+                </div>
+			</div>
+			<div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="title">Email</label>
+                </div>
+                <div>
+                    <input class="w-full p-3 mb-5 border" type="text" name="email" value="{{ user.email }}">
+                </div>
+			</div>
+			<div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="title">Current Password</label>
+                </div>
+                <div>
+                    <input class="w-full p-3 mb-5 border" type="password" name="old-password">
+                </div>
+			</div>
+			<div class="w-full text-center">
+                <div class="text-3xl mb-5">
+                    <label for="title">New Password</label>
+                </div>
+                <div>
+                    <input class="w-full p-3 mb-5 border" type="password" name="new-password">
+                </div>
+            </div>
+            
+        </div> 
+        <div class="w-full flex">
+            <button type="submit" class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Update User</button>
+		</div>
+	</form>
+	<div class="flex w-full">
+		<form action="/deleteUser/{{ user.id }}" method="POST" class="w-full flex">
+			<input type="hidden" name="method" value="DELETE">
+			<input type="hidden" name="id" value="{{ user.id }}">
+			<button class="text-white bg-red-600 rounded p-3 m-3 w-1/4 hover:bg-red-500 w-full">Delete User</button>
+		</form>
+	</div>
+</div>
+{% endblock main_content %}
+{% block footer_scripts %}
+<script>
+    tinymce.init({
+      selector: 'textarea'
+    });
+  </script>
+  {{ parent() }}
+{% endblock footer_scripts %}
+
 {% block content %}
     
 <form action="/updateUser/{{ user.id }}" method="POST">
