--- a/app/resources/templates/posts/index-posts.html
+++ b/app/resources/templates/posts/index-posts.html
@@ -32,7 +32,9 @@
             </a>
         </div>
         <div class="my-auto">
-            {% include "components/edit-post-button.html" %}
+            {% if admin %}
+                {% include "components/edit-post-button.html" %}
+            {% endif %}
         </div>
         
            
